--- a/Appsisteme/Base.lproj/Main.storyboard
+++ b/Appsisteme/Base.lproj/Main.storyboard
@@ -326,7 +326,6 @@ wqFPcyBlc3RhbW9zIGNvbmVjdGFuZG8QISBFbnNlZ3VpZGEgZXN0YW1vcyBsaXN0b3MuLi4
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dmt-cz-zyN" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="bip-VO-bNj" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="3589" y="-472"/>
         </scene>
@@ -347,19 +346,25 @@ wqFPcyBlc3RhbW9zIGNvbmVjdGFuZG8QISBFbnNlZ3VpZGEgZXN0YW1vcyBsaXN0b3MuLi4
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vRM-s3-2Rj">
-                                <rect key="frame" x="61" y="285" width="92" height="30"/>
-                                <state key="normal" title="Editar"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V7b-l7-lsh">
-                                <rect key="frame" x="175" y="285" width="86" height="30"/>
-                                <state key="normal" title="Eliminar"/>
-                            </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Teléfono del contacto" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o5q-Ux-5cj">
                                 <rect key="frame" x="79" y="203" width="162" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vRM-s3-2Rj">
+                                <rect key="frame" x="61" y="285" width="92" height="30"/>
+                                <state key="normal" title="Editar"/>
+                                <connections>
+                                    <action selector="editContact:" destination="Q8z-Fr-e8S" eventType="touchUpInside" id="AfX-ox-prC"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V7b-l7-lsh">
+                                <rect key="frame" x="175" y="285" width="86" height="30"/>
+                                <state key="normal" title="Eliminar"/>
+                                <connections>
+                                    <action selector="deleteContact:" destination="Q8z-Fr-e8S" eventType="touchUpInside" id="ix3-uf-rJO"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -397,7 +402,6 @@ wqFPcyBlc3RhbW9zIGNvbmVjdGFuZG8QISBFbnNlZ3VpZGEgZXN0YW1vcyBsaXN0b3MuLi4
                                 <state key="normal" title="Aceptar"/>
                                 <connections>
                                     <action selector="aceptContact:" destination="rDr-VR-8yb" eventType="touchUpInside" id="GY4-4p-Khm"/>
-                                    <segue destination="bip-VO-bNj" kind="unwind" unwindAction="unwindToContactsView:" id="Gnh-5p-Prn"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="97J-jl-muR">
@@ -405,7 +409,6 @@ wqFPcyBlc3RhbW9zIGNvbmVjdGFuZG8QISBFbnNlZ3VpZGEgZXN0YW1vcyBsaXN0b3MuLi4
                                 <state key="normal" title="Cancelar"/>
                                 <connections>
                                     <action selector="cancelContact:" destination="rDr-VR-8yb" eventType="touchUpInside" id="dJX-xJ-o2D"/>
-                                    <segue destination="bip-VO-bNj" kind="unwind" unwindAction="unwindToContactsView:" id="W3K-gV-FdY"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombre del contacto" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2oV-fS-vkb">
